PLANET-6795: Fix top spacing of Media and Text (#2147)
* Fix top spacing of Media and Text

- Remove the margin top of first wp-group appeared into a layout pattern

* Follow up review

- Update margin-top to media and text block

---------

--- a/assets/src/scss/pages/_page.scss
+++ b/assets/src/scss/pages/_page.scss
@@ -52,6 +52,16 @@
     .navigation-bar_min ~ & {
       padding-top: var(--navbar-menu-min-height);
     }
+
+    .wp-block-group:first-child {
+      & > .wp-block-group:first-child {
+        margin-top: 0;
+      }
+    }
+
+    & > .wp-block-media-text:first-child {
+      margin-top: 0;
+    }
   }
 }
 
